<resources>
    <string name="app_name">中国工况空调乘客信息录入</string>
    <string name="registration">注册</string>
    <string name="wifiInfo">Wifi信息录入</string>
    <string name="wifiIp">IP地址:</string>
    <string name="wifiPort">端口号:</string>
    <string name="wifiDelay">发送间隔:</string>
    <string name="five">5秒</string>
    <string name="ten">10秒</string>
    <string name="thirty">30秒</string>
    <string name="sixty">60秒</string>
    <string name="user_name">车辆编号</string>
    <string name="user_name_description">请输入车辆编号</string>
    <string name="user_vin">车辆VIN号</string>
    <string name="user_vin_description">请输入车辆VIN号</string>
    <string name="user_plate">车牌号</string>
    <string name="user_plate_description">请输入车牌号</string>
    <string name="user_model">车  型</string>
    <string name="user_model_description">请输入车型</string>
    <string name="user_volume">排  量</string>
    <string name="user_volume_description">请输入排量</string>
    <string name="user_AC_model">空调模式：未选择</string>
    <string name="user_AC_cool">制冷</string>
    <string name="user_AC_heat">制热</string>
    <string name="user_AC_status">空调档位：未选择</string>
    <string name="user_passenger">乘客人数：未选择</string>
    <string name="btn_enter">确定</string>
    <string name="btn_upload">上传</string>
    <string name="btn_log">录入</string>
    <string name="btn_GPS">GPS</string>
    <string name="btn_LBS">LBS</string>
    <string name="tbtn_Notification_off">关闭推送</string>
    <string name="tbtn_Notification_on">打开推送</string>
    <string name="alert">请填入指定信息再点击按钮！</string>
    <string name="zero_AC">0档</string>
    <string name="one_AC">1档</string>
    <string name="two_AC">2档</string>
    <string name="three_AC">3档</string>
    <string name="four_AC">4档</string>
    <string name="zero_Passenger">0人</string>
    <string name="one_Passenger">1人</string>
    <string name="two_Passenger">2人</string>
    <string name="three_Passenger">3人</string>
    <string name="four_Passenger">4人</string>
    <string name="GPS_status">GPS 信息显示</string>
    <string name="permission_w_storage">WRITE_EXTERNAL_STORAGE;</string>
    <string name="permission_r_storage">READ_EXTERNAL_STORAGE;</string>
    <string name="permission_f_location">ACCESS_FINE_LOCATION;</string>
    <string name="permission_c_location">ACCESS_COARSE_LOCATION;</string>
</resources>
