<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.yuxin.carinfocollectionapp.RegistrationActivity">

    <TextView
        android:id="@+id/registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text= "@string/registration"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:text="@string/user_name"
        android:layout_below="@id/registration"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/user_plate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:text="@string/user_plate"
        android:layout_below="@id/user_name"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/user_model"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:text="@string/user_model"
        android:layout_below="@id/user_plate"
        android:textSize="20sp"/>


    <EditText
        android:id="@+id/editText_plate"
        android:layout_width="180sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_name"
        android:layout_alignStart="@+id/editText_name"
        android:layout_alignLeft="@+id/editText_name"
        android:layout_alignBottom="@+id/user_plate"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/user_plate_description"
        android:inputType="text"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editText_model"
        android:layout_width="180sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_plate"
        android:layout_alignLeft="@id/editText_plate"
        android:layout_alignBottom="@+id/user_model"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/user_plate"
        android:layout_toRightOf="@+id/user_plate"
        android:contentDescription="@string/user_model_description"
        android:inputType="text"
        android:textSize="20sp" />

    <EditText
        android:layout_width="180sp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:id="@+id/editText_name"
        android:inputType="textPersonName"
        android:contentDescription="@string/user_name_description"
        android:layout_above="@+id/user_plate"
        android:layout_toRightOf="@+id/user_name"
        android:layout_toEndOf="@+id/user_name" />

    <TextView
        android:id="@+id/wifiIP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:text="@string/wifiIp"
        android:layout_below="@id/user_model"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/wifiPort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:text="@string/wifiPort"
        android:layout_below="@id/wifiIP"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/wifiDelay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:text="@string/wifiDelay"
        android:layout_below="@id/wifiPort"
        android:textSize="20sp"/>


    <EditText
        android:layout_width="180sp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:id="@+id/editText_Port"
        android:inputType="number"
        android:layout_alignBottom="@+id/wifiPort"
        android:layout_alignLeft="@+id/editText_name"
        android:layout_alignStart="@+id/editText_name" />

    <EditText
        android:layout_width="180sp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:id="@+id/editText_IP"
        android:inputType="textUri"
        android:layout_above="@+id/wifiPort"
        android:layout_alignLeft="@+id/editText_plate"
        android:layout_alignStart="@+id/editText_plate" />

    <RadioGroup
        android:id="@+id/radioWifiDelay"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/wifiDelay">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/five"
            android:id="@+id/fiveRB"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/ten"
            android:id="@+id/tenRB"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/thirty"
            android:id="@+id/thirtyRB"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/sixty"
            android:id="@+id/sixtyRB"/>


    </RadioGroup>

    <Button
        android:text="@string/btn_enter"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_enter"
        android:layout_marginTop="31dp"
        android:layout_below="@+id/radioWifiDelay"
        android:layout_alignLeft="@+id/registration"
        android:layout_alignStart="@+id/registration" />

    <CheckBox
        android:text="录入定时通知"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkbox_notification"
        android:checked="true"
        android:layout_below="@+id/btn_enter"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp" />


</RelativeLayout>