<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.yuxin.carinfocollectionapp.RegistrationActivity">

    <TextView
        android:id="@+id/registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text= "@string/registration"
        android:textSize="40sp"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:text="@string/user_name"
        android:layout_below="@id/registration"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/user_plate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="30dp"
        android:text="@string/user_plate"
        android:layout_below="@id/user_name"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/user_model"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="30dp"
        android:text="@string/user_model"
        android:layout_below="@id/user_plate"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/user_vin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="30dp"
        android:text="@string/user_vin"
        android:layout_below="@id/user_model"
        android:textSize="20sp"/>


    <EditText
        android:layout_width="180sp"
        android:layout_height="50sp"
        android:textSize="20sp"
        android:id="@+id/editText_plate"
        android:inputType="text"
        android:contentDescription="@string/user_plate_description"
        android:layout_alignBottom="@+id/user_plate"
        android:layout_alignLeft="@+id/editText_name"
        android:layout_alignStart="@+id/editText_name" />

    <EditText
        android:layout_width="180sp"
        android:layout_height="50sp"
        android:textSize="20sp"
        android:id="@+id/editText_model"
        android:inputType="text"
        android:contentDescription="@string/user_model_description"
        android:layout_alignTop="@+id/user_model"
        android:layout_alignLeft="@id/editText_plate"
        android:layout_toRightOf="@+id/user_plate"
        android:layout_toEndOf="@+id/user_plate" />

    <EditText
        android:layout_width="180sp"
        android:layout_height="50sp"
        android:textSize="20sp"
        android:id="@+id/editText_vin"
        android:inputType="text"
        android:contentDescription="@string/user_vin_description"
        android:layout_alignTop="@+id/user_vin"
        android:layout_alignLeft="@id/editText_model"
        android:layout_toRightOf="@+id/user_model"
        android:layout_toEndOf="@+id/user_model" />

    <EditText
        android:layout_width="180sp"
        android:layout_height="50sp"
        android:textSize="20sp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:id="@+id/editText_name"
        android:inputType="textPersonName"
        android:contentDescription="@string/user_name_description"
        android:layout_above="@+id/user_plate"
        android:layout_toRightOf="@+id/user_name"
        android:layout_toEndOf="@+id/user_name" />

    <Button
        android:text="@string/btn_enter"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_enter"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/editText_vin"
        android:layout_alignRight="@+id/registration"
        android:layout_alignEnd="@+id/registration" />

    <CheckBox
        android:text="录入定时通知"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkbox_notification"
        android:checked="true"
        android:layout_below="@+id/btn_enter"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp" />


</RelativeLayout>
