<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.yuxin.carinfocollectionapp.RegistrationActivity">

    <TextView
        android:id="@+id/re_wifi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text= "@string/wifiInfo"
        android:textSize="40sp"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:id="@+id/re_wifiIP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:text="@string/wifiIp"
        android:layout_below="@id/re_wifi"
        android:textSize="30sp"
        />

    <TextView
        android:id="@+id/re_wifiPort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="30dp"
        android:text="@string/wifiPort"
        android:layout_below="@id/re_wifiIP"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/re_wifiDelay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="30dp"
        android:text="@string/wifiDelay"
        android:layout_below="@id/re_wifiPort"
        android:textSize="30sp"/>


    <EditText
        android:layout_width="180sp"
        android:layout_height="50sp"
        android:textSize="25sp"
        android:id="@+id/re_editText_Port"
        android:inputType="number"
        android:layout_alignBottom="@+id/re_wifiPort"
        android:layout_alignLeft="@+id/re_editText_IP"
        android:layout_alignStart="@+id/re_editText_IP" />

    <EditText
        android:layout_width="180sp"
        android:layout_height="50sp"
        android:textSize="25sp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:id="@+id/re_editText_IP"
        android:inputType="textUri"
        android:layout_above="@+id/re_wifiPort"
        android:layout_toRightOf="@+id/re_wifiIP"
        android:layout_toEndOf="@+id/re_wifiIP" />

    <RadioGroup
        android:id="@+id/re_radioWifiDelay"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/re_wifiDelay">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/five"
            android:id="@+id/re_fiveRB"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/ten"
            android:id="@+id/re_tenRB"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/thirty"
            android:id="@+id/re_thirtyRB"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/sixty"
            android:id="@+id/re_sixtyRB"/>


    </RadioGroup>

    <Button
        android:text="@string/btn_enter"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_re_wifiEnter"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/re_radioWifiDelay"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
